@@ -340,7 +340,7 @@ name|Rule
 operator|.
 name|MatchStatus
 operator|.
-name|NODE_CAN_BE_ASSIGNED
+name|*
 import|;
 end_import
 
@@ -360,67 +360,7 @@ name|Rule
 operator|.
 name|Phase
 operator|.
-name|ASSIGN
-import|;
-end_import
-
-begin_import
-import|import static
-name|org
-operator|.
-name|apache
-operator|.
-name|solr
-operator|.
-name|cloud
-operator|.
-name|rule
-operator|.
-name|Rule
-operator|.
-name|Phase
-operator|.
-name|FUZZY_ASSIGN
-import|;
-end_import
-
-begin_import
-import|import static
-name|org
-operator|.
-name|apache
-operator|.
-name|solr
-operator|.
-name|cloud
-operator|.
-name|rule
-operator|.
-name|Rule
-operator|.
-name|Phase
-operator|.
-name|FUZZY_VERIFY
-import|;
-end_import
-
-begin_import
-import|import static
-name|org
-operator|.
-name|apache
-operator|.
-name|solr
-operator|.
-name|cloud
-operator|.
-name|rule
-operator|.
-name|Rule
-operator|.
-name|Phase
-operator|.
-name|VERIFY
+name|*
 import|;
 end_import
 
@@ -2071,6 +2011,10 @@ condition|(
 name|matchStatus
 operator|!=
 name|NODE_CAN_BE_ASSIGNED
+operator|&&
+name|matchStatus
+operator|!=
+name|NOT_APPLICABLE
 condition|)
 return|return
 literal|null
